# yzendris

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
config/: client.example.toml  server.example.toml
crates/client/: Cargo.toml  build.rs
crates/client/src/: clipboard.rs  hyprland.rs  main.rs  net.rs  tls.rs  tracker.rs  uinput.rs
crates/client/src/platform/: linux.rs  mod.rs  windows.rs
crates/gui/: Cargo.toml  build.rs
crates/gui/src/: client_panel.rs  config_model.rs  daemon.rs  host_panel.rs  main.rs  monitors.rs  setup.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: clipboard.rs  edge.rs  hook.rs  main.rs  monitors.rs  net.rs  tls.rs
scripts/: install-linux.sh  install-windows-client.ps1  install-windows-uiaccess.ps1  install-windows.ps1
