[workspace]
members = ["crates/protocol", "crates/server", "crates/client"]
resolver = "2"

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
bincode    = "1"
tokio      = { version = "1", features = ["full"] }
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml       = "0.8"
serde_json = "1"
