[package]
name    = "yzendris-client"
version = "0.1.0"
edition = "2021"

[dependencies]
yzendris-protocol   = { path = "../protocol" }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
bincode             = { workspace = true }
toml                = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

# TLS — cross-platform (the client runs on both the Linux laptop and, when the
# laptop is booted into Windows, on Windows).
rcgen          = { version = "0.13" }
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls   = { version = "0.26" }
sha2           = "0.10"

# Linux backend: uinput + Hyprland.
[target.'cfg(target_os = "linux")'.dependencies]
libc  = "0.2"
evdev = { version = "0.13" }

# Windows backend: SendInput + Win32 cursor/monitor/clipboard.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }
