[package]
name    = "yzendris-server"
version = "0.1.0"
edition = "2021"

[dependencies]
yzendris-protocol   = { path = "../protocol" }
tokio               = { workspace = true }
serde               = { workspace = true }
bincode             = { workspace = true }
toml                = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }

rustls       = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26" }
sha2         = "0.10"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
